--- a/src/app/components/casualty-form/casualty-form.component.scss
+++ b/src/app/components/casualty-form/casualty-form.component.scss
@@ -51,22 +51,5 @@ mat-sidenav-content {
 }
 
 .edit-injuries-button{
-  color: rgba(0, 0, 0, 0.16);
-}
-
-.header{
-    .actions{
-        button {
-            mat-icon{
-                color: rgba(0, 0, 0, 0.24);
-                transition: color 100ms ease;
-            }
-
-            &:active {
-                mat-icon{
-                    color: black;
-                }
-            }
-        }
-    }
+  margin-right: -8px;
 }
