--- a/src/app/components/maneuver-norm-list-item/maneuver-norm-list-item.component.html
+++ b/src/app/components/maneuver-norm-list-item/maneuver-norm-list-item.component.html
@@ -1,4 +1,4 @@
-<div [ngClass]="{'selected': isSelected()}" class="secondary-text">
+<div [ngClass]="{'selected': isSelected()}" class="text">
     {{ maneuver.description }}
 </div>
 
