--- a/src/app/components/add-maneuver/add-maneuver.component.html
+++ b/src/app/components/add-maneuver/add-maneuver.component.html
@@ -11,7 +11,7 @@
                 <mat-icon>more_vert</mat-icon>
             </button>
             <mat-menu #menu="matMenu">
-                <button mat-menu-item (click)="delete()">Șterge</button>
+                <button mat-menu-item class="seconday-button" (click)="delete()">Șterge</button>
             </mat-menu>
         </div>
     </div>
