--- a/src/app/components/casualty-form/casualty-form.component.html
+++ b/src/app/components/casualty-form/casualty-form.component.html
@@ -14,7 +14,7 @@
                 <span class="top-bar-title">{{ (id$ | async) ? 'Modifică victima' : 'Creează o victimă' }}</span>
 
                 <div class="actions">
-                    <button *ngIf="id$ | async" mat-icon-button (click)="delete()">
+                    <button *ngIf="id$ | async" class="secondary-button" mat-icon-button (click)="delete()">
                         <mat-icon>delete</mat-icon>
                     </button>
                 </div>
@@ -36,7 +36,7 @@
                         <button *ngIf="!hasInjuries" mat-mini-fab (click)="sidenav.toggle()">
                             <mat-icon>add</mat-icon>
                         </button>
-                        <button *ngIf="hasInjuries" class="edit-injuries-button" mat-icon-button (click)="sidenav.toggle()">
+                        <button *ngIf="hasInjuries" class="secondary-button edit-injuries-button" mat-icon-button (click)="sidenav.toggle()">
                             <mat-icon>edit</mat-icon>
                         </button>
                     </div>
