--- a/src/app/components/casualty-v2/casualty-v2.component.html
+++ b/src/app/components/casualty-v2/casualty-v2.component.html
@@ -7,7 +7,7 @@
         <span class="top-bar-title"></span>
 
         <div class="actions">
-            <button mat-icon-button [routerLink]="'edit'">
+            <button mat-icon-button class="secondary-button" [routerLink]="'edit'">
                 <mat-icon>edit</mat-icon>
             </button>
         </div>
