--- a/src/app/components/dialog-norm-review/dialog-norm-review.component.html
+++ b/src/app/components/dialog-norm-review/dialog-norm-review.component.html
@@ -2,16 +2,17 @@
     <div class="content">
         <div class="title">Punctaj</div>
         <div class="score">
-            {{ getScore() }}<span class="score total-score">/{{totalScore}}</span>
+            {{ getScore() }}<span class="total-score">/{{totalScore}}</span>
         </div>
+        <div *ngIf="getScore() === totalScore" class="text perfect-score">Felicitări! Ai obținut scorul maxim!</div>
         <app-norm [injuries]="filteredInjuries$ | async" [showCounting]="false" (scoreChange)="setSelectedScore($event.injuryIndex, $event.maneuverIndex, $event.selectedScore)"></app-norm>
-        <button mat-button color="accent" (click)="toggleShowAll()">Arată tot</button>
+        <button mat-button color="accent" (click)="toggleShowAll()">{{ (filter$ | async) ? 'Arată tot baremul' : 'Arată doar rezumatul' }}</button>
     </div>
 
     <div class="footer">
         <div class="actions">
             <button mat-raised-button color="accent" (click)="close()">
-                Continuă
+                Închide
             </button>
         </div>
     </div>
