--- a/src/app/components/dialog-norm-review/dialog-norm-review.component.scss
+++ b/src/app/components/dialog-norm-review/dialog-norm-review.component.scss
@@ -8,7 +8,7 @@
     width: 100%;
     min-height: 100%;
     box-sizing: border-box;
-    padding: 16px 0 24px;
+    padding: 24px 0;
 }
 
 .screen {
@@ -26,11 +26,15 @@
     display: flex;
     align-items: baseline;
     justify-content: center;
-    margin-bottom: 16px;
+    margin-bottom: 42px;
 
-    &.total-score{
+    .total-score{
         font-size: 16px;
         color: $light-grey;
         font-weight: 400;
     }
+}
+
+.perfect-score{
+    margin-bottom: 16px;
 }
