--- a/src/app/components/maneuver-form/maneuver-form.component.html
+++ b/src/app/components/maneuver-form/maneuver-form.component.html
@@ -7,7 +7,7 @@
         <span class="top-bar-title">{{ (editing$ | async) ? 'Modifică manevra' : 'Adaugă o manevră' }}</span>
 
         <div class="actions">
-            <button *ngIf="editing$ | async" mat-icon-button (click)="delete()">
+            <button *ngIf="editing$ | async" class="secondary-button" mat-icon-button (click)="delete()">
                 <mat-icon>delete</mat-icon>
             </button>
         </div>
