--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -10,8 +10,9 @@ $elevate-2: 0 2px 4px -1px rgba(0, 0, 0, .1),
 // $elevate-4: 0 8px 12px -3px rgba(0, 0, 0, .08),
 //     0 1px 3px -5px rgba(0, 0, 0, .2);
 // $elevate-4: 0 8px 20px 0 rgba(0,0,0,.04);
-$elevate-4: 0 8px 20px -6px rgba(0,0,0,.08),
+$elevate-4: 0 8px 16px -6px rgba(0,0,0,.08),
     0 1px 3px -3px rgba(0, 0, 0, .2);
+// $elevate-4: 0 4px 8px 0 rgba(0, 0, 0, 0.03), 0 8px 16px 0 rgba(0, 0, 0, 0.01), 0 12px 20px 4px rgba(0, 0, 0, 0.01);
 
 $primary-font: 'Roboto', sans-serif;
 
