--- a/src/app/components/case-card-v2/case-card-v2.component.scss
+++ b/src/app/components/case-card-v2/case-card-v2.component.scss
@@ -32,7 +32,7 @@
     // }
 }
 
-.card-content{
+.card-header{
     padding: 8px 24px;
     min-height: 32px;
     display: flex;
@@ -43,4 +43,9 @@
 .name {
     font-family: $primary-font;
     margin: 0;
+    flex-grow: 1;
+}
+
+.card-header-actions{
+    margin: -8px;
 }
