--- a/src/app/components/casualty-card-v2/casualty-card-v2.component.html
+++ b/src/app/components/casualty-card-v2/casualty-card-v2.component.html
@@ -1,25 +1,25 @@
-<div class="custom-card">
+<div class="custom-card" [routerLink]="'casualties/' + casualty.id">
     <div class="card-header">
         <div class="card-avatar">
             <mat-icon>account_circle</mat-icon>
         </div>
         <div class="card-title">{{ casualty.name }}</div>
-        <div class="card-header-actions">
-            <button mat-icon-button color="accent">
-                <mat-icon>arrow_forward</mat-icon>
-            </button>
-        </div>
     </div>
     <div class="card-content">
         <mat-chip-list class="simple-chip-list">
             <mat-chip *ngFor="let key of objectKeys(casualty.injuries)" selectable="false" focused="false" disableRipple>{{ casualty.injuries[key] }}</mat-chip>
         </mat-chip-list>
-        <div class="text">
+        <div *ngIf="casualty.details" class="text">
             {{ casualty.details }}
         </div>
     </div>
-    <!-- <div class="card-actions">
-        <button mat-button color="accent">Arbitrează</button>
-        <button mat-icon-button color="accent"><mat-icon>arrow_forward</mat-icon></button>
-    </div> -->
+    <div class="card-actions">
+        <button mat-button color="accent" (click)="$event.stopPropagation()" [routerLink]="'casualties/' + casualty.id + '/norm'" >Arbitrează</button>
+        
+        <div class="secondary-actions">
+            <button mat-icon-button color="accent" (click)="$event.stopPropagation()" [routerLink]="'casualties/' + casualty.id">
+                <mat-icon>arrow_forward</mat-icon>
+            </button>
+        </div>
+    </div>
 </div>
