--- a/src/app/components/case-v2/case-v2.component.html
+++ b/src/app/components/case-v2/case-v2.component.html
@@ -41,7 +41,7 @@
         <div class="casualties">
             <label class="label">Victime</label>
             <div class="casualties-container">
-                <app-casualty-card-v2 *ngFor="let casualty of casualties$ | async" [casualty]="casualty">
+                <app-casualty-card-v2 *ngFor="let casualty of casualties$ | async" [casualty]="casualty" [baseRoute]="'casualties'">
                 </app-casualty-card-v2>
             </div>
         </div>
