--- a/src/app/components/case-v2/case-v2.component.html
+++ b/src/app/components/case-v2/case-v2.component.html
@@ -49,10 +49,10 @@
 
     <div class="footer">
         <div class="actions">
-            <button mat-raised-button color="accent" [routerLink]="'casualties/7VmD9bzw9zsjHhyfNwNt/norm'">
+            <button mat-raised-button color="accent" [routerLink]="'casualties/7VmD9bzw9zsjHhyfNwNt/chief-norm'">
                 <!-- Publică -->
                 <!-- Alege -->
-                Start caz
+                Începe caz
             </button>
         </div>
     </div>
