--- a/src/styles.scss
+++ b/src/styles.scss
@@ -340,11 +340,25 @@ mat-chip{
   }
 
   .mat-raised-button.mat-accent{
-    width: calc(100vw - 64px);
     line-height: 48px;
     border-radius: 50px;
     font-size: 15px;
     letter-spacing: 0.02em;
+  }
+
+  .actions{
+    display: flex;
+    width: calc(100vw - 64px);
+
+    .mat-raised-button{
+      width: auto;
+      flex-grow: 1;
+      width: 50%;
+
+      &:not(:last-child){
+        margin-right: 16px;
+      }
+    }
   }
 }
 
@@ -662,4 +676,19 @@ mat-panel-title{
 
 [hidden] {
   display: none !important;
+}
+
+mat-tab-group{
+  mat-tab-header{
+    transition: $transition;
+    z-index: 2;
+  }
+
+  &.raised {
+    mat-tab-header{
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.08),
+      0 1px 3px -1px rgba(0, 0, 0, 0.2);
+      border-bottom: transparent;
+    }
+  }
 }
