--- a/src/app/components/casualties-v2/casualties-v2.component.html
+++ b/src/app/components/casualties-v2/casualties-v2.component.html
@@ -1,8 +1,8 @@
 <div #screen class="screen">
     <div class="header" [class.raised]="scrolling$ | async">
-        <button mat-icon-button (click)="back()">
+        <!-- <button mat-icon-button (click)="back()">
             <mat-icon>arrow_back</mat-icon>
-        </button>
+        </button> -->
 
         <span class="top-bar-title">Victime</span>
 
