--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<main id="page" [@routeAnimation]="getState(myOutlet)">
+<div id="page" [@routeAnimation]="getState(myOutlet)">
     <router-outlet #myOutlet="outlet"></router-outlet>
-</main>
+</div>
