--- a/src/app/components/bottom-navigation/bottom-navigation.component.html
+++ b/src/app/components/bottom-navigation/bottom-navigation.component.html
@@ -6,7 +6,7 @@
         matRippleRadius="40"
         matRippleColor="rgba(0, 0, 0, 0.03)"
         (click)="goTo('/cases')">
-        <mat-icon>home</mat-icon>
+        <mat-icon fontSet="material-icons-outlined">home</mat-icon>
         <div class="mat-caption bottom-navigation-text">
             Cazuri
         </div>
@@ -18,7 +18,7 @@
         matRippleRadius="40"
         matRippleColor="rgba(0, 0, 0, 0.03)"
         (click)="goTo('/casualties')">
-        <mat-icon>people</mat-icon>
+        <mat-icon fontSet="material-icons-outlined">people</mat-icon>
         <div class="mat-caption bottom-navigation-text">
             Victime
         </div>
@@ -30,7 +30,7 @@
         matRippleRadius="40"
         matRippleColor="rgba(0, 0, 0, 0.03)"
         (click)="goTo('/injuries')">
-        <mat-icon>add_location</mat-icon>
+        <mat-icon fontSet="material-icons-outlined">assignment</mat-icon>
         <div class="mat-caption bottom-navigation-text">
             Leziuni
         </div>
