--- a/src/app/components/bottom-navigation/bottom-navigation.component.scss
+++ b/src/app/components/bottom-navigation/bottom-navigation.component.scss
@@ -12,6 +12,8 @@
     display: flex;
     align-items: center;
     height: 56px;
+    box-shadow: 0 0px 12px 0 rgba(0, 0, 0, 0.08), 
+        0 -1px 3px -3px rgba(0, 0, 0, 0.2);
 
     .bottom-navigation-link{
         height: 100%;
@@ -21,7 +23,7 @@
         flex-grow: 1;
         align-items: center;
         min-width: 80px;
-        color: $dark-grey;
+        color: $grey;
         transition: $transition;
 
         &.active{
