--- a/src/app/components/casualty-card-v2/casualty-card-v2.component.html
+++ b/src/app/components/casualty-card-v2/casualty-card-v2.component.html
@@ -17,7 +17,7 @@
         <button mat-button color="accent" (click)="$event.stopPropagation()" [routerLink]="[getCasualtyRoute() + '/norm']">Arbitrează</button>
         
         <div class="secondary-actions">
-            <button mat-icon-button color="accent" (click)="$event.stopPropagation()" [routerLink]="[getCasualtyRoute()]">
+            <button mat-icon-button class="secondary-button" (click)="$event.stopPropagation()" [routerLink]="[getCasualtyRoute()]">
                 <mat-icon>arrow_forward</mat-icon>
             </button>
         </div>
