--- a/src/app/components/chief-norm/chief-norm.component.html
+++ b/src/app/components/chief-norm/chief-norm.component.html
@@ -5,10 +5,10 @@
                 <mat-icon>arrow_back</mat-icon>
             </button>
 
-            <span class="top-bar-title">{{ time | time }}</span>
+            <span class="top-bar-title">{{ time$ | async | time }}</span>
 
             <div class="actions">
-                <button mat-icon-button class="secondary-button" [class.active]="additionalInfoExpanded$ | async" [disabled]="!laps.length"
+                <button mat-icon-button class="secondary-button" [class.active]="additionalInfoExpanded$ | async" [disabled]="!(laps$ | async)?.length"
                     (click)="toggleAdditionalInfo()">
                     <mat-icon>timer</mat-icon>
                 </button>
@@ -17,7 +17,7 @@
         <mat-accordion class="additional-header-info">
             <mat-expansion-panel [expanded]="additionalInfoExpanded$ | async">
                 <div class="laps">
-                    <div *ngFor="let lap of laps; let i = index" class="lap">
+                    <div *ngFor="let lap of laps$ | async; let i = index" class="lap">
                         <span class="counter secondary-text">{{ getCounter(i) }}</span>
                         <span class="time text">{{ lap.time | time }}</span>
                     </div>
@@ -55,16 +55,16 @@
 
     <div class="footer">
         <div class="actions">
-            <button mat-raised-button *ngIf="!started && !stopped" color="accent" (click)="start()">
+            <button mat-raised-button *ngIf="!(started$ | async) && !(stopped$ | async)" color="accent" (click)="start()">
                 Start
             </button>
-            <button mat-raised-button *ngIf="!stopped && started"  color="accent" (click)="lap()">
+            <button mat-raised-button *ngIf="!(stopped$ | async) && (started$ | async)"  color="accent" (click)="lap()">
                 Lap
             </button>
-            <button mat-raised-button *ngIf="!stopped && started" color="accent" (click)="stop()">
+            <button mat-raised-button *ngIf="!(stopped$ | async) && (started$ | async)" color="accent" (click)="stop()">
                 Stop
             </button>
-            <button mat-raised-button *ngIf="stopped" color="accent" [disabled]="!canFinish()" (click)="openNormReview()">
+            <button mat-raised-button *ngIf="(stopped$ | async)" color="accent" [disabled]="!canFinish()" (click)="openNormReview()">
                 Finish
             </button>
         </div>
