barem score style change

--- a/src/app/components/maneuver-list-item-v2/maneuver-list-item-v2.component.html
+++ b/src/app/components/maneuver-list-item-v2/maneuver-list-item-v2.component.html
@@ -2,11 +2,11 @@
     {{ maneuver.description }}
 </span>
 
-<span class="score-container">
-    <div class="score-chip">
+<span class="custom-chip-list">
+    <div class="chip">
         {{ maneuver.average ? maneuver.score/2 : '-' }}
     </div>
-    <div class="score-chip">
+    <div class="chip">
         {{ maneuver.score }}
     </div>
 </span>
