--- a/src/app/components/create-injury-v2/create-injury-v2.component.scss
+++ b/src/app/components/create-injury-v2/create-injury-v2.component.scss
@@ -92,3 +92,9 @@ mat-sidenav-container {
   height: 100%;
   background-color: rgba(255, 255, 255, 0.8);
 }
+
+mat-icon{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
