--- a/src/app/components/maneuver-norm-list-item/maneuver-norm-list-item.component.scss
+++ b/src/app/components/maneuver-norm-list-item/maneuver-norm-list-item.component.scss
@@ -23,7 +23,7 @@
         padding: 0;
         width: 32px;
         height: 32px;
-        border-radius: 50%;
+        border-radius: 8px;
         margin: 2px;
     }
 }
