--- a/src/styles.scss
+++ b/src/styles.scss
@@ -251,7 +251,6 @@ mat-chip{
     .search-input{
       height: 32px;
       border-radius: 24px;
-      // background-color: #f8f8f8;
       margin: 0;
       padding-left: 16px;
       font-weight: 400;
@@ -269,10 +268,12 @@ mat-chip{
 
 
 .custom-chip-list {
-  mat-chip {
-    background-color: #fff !important;
+  display: flex;
+
+  mat-chip,
+  .chip {
+    background-color: $white-grey !important;
     box-sizing: border-box;
-    border: solid 1px rgba(0, 0, 0, 0.14);
     border-radius: 6px;
     @include transition(box-shadow);
     transition: transform .25s ease;
@@ -280,6 +281,19 @@ mat-chip{
     &:after {
       display: none;
     }
+  }
+
+  .chip{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    width: 32px;
+    height: 32px;
+    border-radius: 8px;
+    margin: 2px;
+    font-family: $primary-font;
+    font-size: 14px;
   }
 
   .mat-chip-selected {
