fixed barem score bug

--- a/src/app/components/maneuver-norm-list-item/maneuver-norm-list-item.component.html
+++ b/src/app/components/maneuver-norm-list-item/maneuver-norm-list-item.component.html
@@ -8,7 +8,7 @@
     </mat-chip>
     <mat-chip [disabled]="!maneuver.average"
         [selected]="maneuver.selectedScore === maneuver.score/2"
-        (click)="onScoreChange(maneuver.score/2)">
+        (click)="maneuver.average && onScoreChange(maneuver.score/2)">
         {{ maneuver.average ? maneuver.score/2 : '-' }}
     </mat-chip>
     <mat-chip [selected]="maneuver.selectedScore === maneuver.score" (click)="onScoreChange(maneuver.score)">
