--- a/src/app/components/chief-norm/chief-norm.component.html
+++ b/src/app/components/chief-norm/chief-norm.component.html
@@ -26,13 +26,17 @@
         </mat-accordion>
     </div>
 
-    <mat-tab-group mat-stretch-tabs [class.raised]="scrolling$ | async">
+    <mat-tab-group mat-stretch-tabs [class.raised]="scrolling$ | async" (selectedTabChange)="onSelectedTabChange($event)">
         <mat-tab label="Barem">
-            <ng-template matTabContent>
-                <div #content class="content">
-                    <app-norm [injuries]="injuries$ | async" (scoreChange)="setSelectedScore($event.injuryIndex, $event.maneuverIndex, $event.selectedScore)"></app-norm>
-                </div>
-            </ng-template>
+            <div #content class="content">
+                <app-norm
+                    *ngIf="showNorm$ | async"
+                    [expandedMap]="expandedMap$ | async"
+                    [injuries]="injuries$ | async"
+                    (scoreChange)="setSelectedScore($event.injuryIndex, $event.maneuverIndex, $event.selectedScore)"
+                    (expandedChanged)="mapExpanded($event)">
+                </app-norm>
+            </div>                    
         </mat-tab>
         <mat-tab label="Leziuni">
             <div class="content">
